--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         <ul class="text-center">
             <li>Soy colaboradora en la revista “Igualdad", editada por el Consejo de la Judicatura Federal. </li>
-            <li>Tengo una columna en el Diario de mayor circulación en el Estado de México “El Sol de Toluca” titulada: “Mujer Contemporánea</li>
+            <li>Tengo una columna en el Diario de mayor circulación en el Estado de México “El Sol de Toluca” titulada: “Mujer Contemporánea”</li>
             <li>Escribo artículos para la Revista "Valores</li>
             <li>Tengo un segmento televisivo en el programa de “Grupo Formula”, versando temas jurídicos y sociales.</li>
         </ul>
