--- a/index.html
+++ b/index.html
@@ -150,8 +150,7 @@
             <label class="text-message" for="message-files">Documentos: </label>
             <input class="btn" type="file" name="message-files" id="message-files" multiple>-->
             <br>
-            <script src='https://www.google.com/recaptcha/api.js?hl=es'></script>
-            <div class="g-recaptcha" data-sitekey="6Lea_1IaAAAAAOfMy3cySqONM7-O0IVuwYEoiqKz"></div>
+            <script src="https://www.google.com/recaptcha/api.js?render=6Lea_1IaAAAAAOfMy3cySqONM7-O0IVuwYEoiqKz"></script>
             <br>
             <br>
             <input class="btn" type="button" value="Enviar">
