--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <input class="btn" type="file" name="message-files" id="message-files" multiple>-->
             <br>
             <script src="https://www.google.com/recaptcha/api.js?render=6Lea_1IaAAAAAOfMy3cySqONM7-O0IVuwYEoiqKz"></script>
-            <button class="g-recaptcha" data-sitekey="6Lea_1IaAAAAAOfMy3cySqONM7-O0IVuwYEoiqKz" data-callback='onSubmit' data-action='submit'>Submit</button>
+            <div class="g-recaptcha" data-sitekey="6Lea_1IaAAAAAOfMy3cySqONM7-O0IVuwYEoiqKz" data-callback='onSubmit' data-action='submit'>Submit</div>
             <br>
             <br>
             <input class="btn" type="button" value="Enviar">
