--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
             <label class="text-message" for="message-files">Documentos: </label>
             <input class="btn" type="file" name="message-files" id="message-files" multiple>-->
             <br>
-            <script src="https://www.google.com/recaptcha/api.js?render=6Lea_1IaAAAAAOfMy3cySqONM7-O0IVuwYEoiqKz"></script>
-            <div class="g-recaptcha" data-sitekey="6Lea_1IaAAAAAOfMy3cySqONM7-O0IVuwYEoiqKz" data-callback='onSubmit' data-action='submit'>Submit</div>
+            <script src="https://www.google.com/recaptcha/api.js"></script>
+            <button class="g-recaptcha" data-sitekey="6Lea_1IaAAAAAOfMy3cySqONM7-O0IVuwYEoiqKz" data-callback='onSubmit' data-action='submit'>Submit</button>
             <br>
             <br>
             <input class="btn" type="button" value="Enviar">
