--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lora|Montserrat&display=swap" rel="stylesheet">
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v9.0" nonce="wTcTIFEN"></script>
+    <script src="https://www.google.com/recaptcha/api.js"></script>
     <script src="js/menu.js"></script>
     <title>Xochitl Page</title>
 </head>
@@ -150,7 +151,6 @@
             <label class="text-message" for="message-files">Documentos: </label>
             <input class="btn" type="file" name="message-files" id="message-files" multiple>-->
             <br>
-            
             <button class="g-recaptcha" data-sitekey="6Lea_1IaAAAAAOfMy3cySqONM7-O0IVuwYEoiqKz" data-callback='onSubmit' data-action='submit'>Submit</button>
             <br>
             <br>
