--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lora|Montserrat&display=swap" rel="stylesheet">
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v9.0" nonce="wTcTIFEN"></script>
-    <script src="https://www.google.com/recaptcha/api.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <script src="js/menu.js"></script>
     <title>Xochitl Page</title>
 </head>
@@ -135,7 +135,7 @@
     </div>
 
     <div class="content-form" id="content-form">
-        <form class="message" id="message">
+        <form class="message" id="message" action="?" method="POST">
             <label class="text-message" for="email-emisor">Correo:  </label>
             <input class="input" type="email" name="email-emisor" id="email-emisor" placeholder="Email" required>
             <br>
@@ -151,13 +151,7 @@
             <label class="text-message" for="message-files">Documentos: </label>
             <input class="btn" type="file" name="message-files" id="message-files" multiple>-->
             <br>
-            <script>
-   function onSubmit(token) {
-     document.getElementById("message").submit();
-   }
- </script>
-
-            <button class="g-recaptcha" data-sitekey="6Lea_1IaAAAAAOfMy3cySqONM7-O0IVuwYEoiqKz" data-callback='onSubmit' data-action='submit'>Submit</button>
+            <div class="g-recaptcha" data-sitekey="6Lea_1IaAAAAAOfMy3cySqONM7-O0IVuwYEoiqKz"></div>
             <br>
             <br>
             <input class="btn" type="button" value="Enviar">
