--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@
     </div>
 
     <div class="content-form" id="content-form">
-        <form class="message" id="message" action="?" method="POST">
+        <form class="message" id="message" action="enviar.php" method="POST">
             <label class="text-message" for="email-emisor">Correo:  </label>
             <input class="input" type="email" name="email-emisor" id="email-emisor" placeholder="Email" required>
             <br>
             <br>
             <label class="text-message" for="asunto-message">Asunto:</label>
-            <input class="input" type="text" name="asunto-message" id="asunto-message" placeholder="Asunto">
+            <input class="input" type="text" name="asunto-message" id="asunto-message" placeholder="Asunto" required>
             <br>
             <br>
             <label class="text-message" for="message-text">Texto: </label>
