--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <div class="g-recaptcha" data-sitekey="6Lea_1IaAAAAAOfMy3cySqONM7-O0IVuwYEoiqKz"></div>
             <br>
             <br>
-            <input class="btn" type="button" value="Enviar">
+            <input class="btn" type="submit" name="enviar" value="Enviar">
         </form>
     </div>
 
