--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </div>
 
     <div class="content-form" id="content-form">
-        <form class="message" id="message" action="enviar.php" method="POST">
+        <form class="message" id="message" action="mailto:bere24school@gmail.com" method="POST">
             <label class="text-message" for="email-emisor">Correo:  </label>
             <input class="input" type="email" name="email-emisor" id="email-emisor" placeholder="Email" required>
             <br>
